@@ -23,6 +23,7 @@ import android.content.SharedPreferences;
 import android.os.Bundle;
 import android.preference.Preference;
 import android.preference.PreferenceActivity;
+import android.preference.PreferenceManager;
 import android.util.Log;
 import br.repinel.R;
 import br.repinel.setfundao.data.DataProvider;
@@ -37,9 +38,12 @@ import br.repinel.setfundao.helper.UIHelper;
 public class Preferences extends PreferenceActivity implements
 		SharedPreferences.OnSharedPreferenceChangeListener {
 
-	/** {@link Preferences}: update interval. */
 	public static final String PREFS_UPDATE_INTERVAL = "update_interval";
+
 	public static final String PREFS_LAST_FETCH_DATE = "last_fetch_date_";
+
+	public static final String PREFS_FETCH_IMAGE_ON_CREATE_ACTIVITY = "fetch_image_on_create_activity";
+	public static final String PREFS_FETCH_TW_ON_CREATE_ACTIVITY = "fetch_tw_on_create_activity";
 
 	/**
 	 * @see android.preference.PreferenceActivity#onCreate(android.os.Bundle)
@@ -49,6 +53,10 @@ public class Preferences extends PreferenceActivity implements
 		super.onCreate(savedInstanceState);
 
 		AnalyticsHelper.getInstance(this).trackPageView("/Preferences");
+
+		// ensuring the default value...
+		UIHelper.getFetchImageOnCreateActivity(this, getResources());
+		UIHelper.getFetchTwOnCreateActivity(this, getResources());
 
 		this.addPreferencesFromResource(R.xml.prefs);
 
@@ -82,7 +90,11 @@ public class Preferences extends PreferenceActivity implements
 		DataProvider dataProvider = new DataProvider(this);
 		dataProvider.resetData();
 
-		UIHelper.setUpdateInterval(this, getString(R.string.default_update_interval));
+		SharedPreferences.Editor editor = PreferenceManager.getDefaultSharedPreferences(this).edit();
+		editor.remove(Preferences.PREFS_UPDATE_INTERVAL);
+		editor.remove(Preferences.PREFS_FETCH_IMAGE_ON_CREATE_ACTIVITY);
+		editor.remove(Preferences.PREFS_FETCH_TW_ON_CREATE_ACTIVITY);
+		editor.commit();
 
 		UIHelper.showMessage(this, getString(R.string.reset_settings_message));
 	}
